force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/Process_Attribute_Dcoument_Detail__c.object-meta.xml
<CustomObject>
    <label>Process Attribute Dcoument Detail</label>
    <nameField>
        <label>Process Attribute Dcoument Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Attribute Dcoument Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>