force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Alternate_Document_For_PADC__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Document_For_PADC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Document For PADC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Process_Path_Task_Detail__c</field>
            <operation>equals</operation>
            <valueField>$Source.Process_Path_Task_Detail__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Process_Attribute_Dcoument_Detail__c</referenceTo>
    <relationshipLabel>Process Attribute Dcoument Details</relationshipLabel>
    <relationshipName>Process_Attribute_Dcoument_Details</relationshipName>
    <type>Lookup</type>
</CustomField>