force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Associated_With_Sobject__c.field-meta.xml
<CustomField>
    <fullName>Associated_With_Sobject__c</fullName>
    <label>Associated With Sobject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sObjectName</valueSetName>
    </valueSet>
</CustomField>