force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Deviation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Approver__c</fullName>
    <label>Deviation Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>