force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Dispatch_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispatch Mandatory</label>
    <type>Checkbox</type>
</CustomField>