force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/DMS_System__c.field-meta.xml
<CustomField>
    <fullName>DMS_System__c</fullName>
    <label>DMS System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>