force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <formula>Document_Metadata__r.Document_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Category</label>
    <type>Text</type>
</CustomField>