force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Description__c</fullName>
    <formula>Document_Metadata__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Description</label>
    <type>Text</type>
</CustomField>