force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Document_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Document_Metadata__c</fullName>
    <label>Document Metadata</label>
    <referenceTo>Document_Metadata__c</referenceTo>
    <relationshipLabel>Process Attribute Dcoument Details</relationshipLabel>
    <relationshipName>Process_Attribute_Dcoument_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>