force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <formula>Document_Metadata__r.Document_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Name</label>
    <type>Text</type>
</CustomField>