force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Document_SLA__c.field-meta.xml
<CustomField>
    <fullName>Document_SLA__c</fullName>
    <label>Document SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>