force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Is_Alternate_Document_Upload_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Alternate_Document_Upload_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Alternate Document Upload Applicable</label>
    <type>Checkbox</type>
</CustomField>