force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Is_Document_Collection_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Document_Collection_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Collection is Mandatory even though an alternate document has been uploaded</description>
    <label>Is Document Collection Mandatory</label>
    <type>Checkbox</type>
</CustomField>