force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Is_New_Document__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Document</label>
    <type>Checkbox</type>
</CustomField>