force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Max_Dispatch_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Max_Dispatch_Serial_No__c</fullName>
    <formula>Process_Document_Dispatch_Path__r.Max_Dispatch_Serial_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Dispatch Serial No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>