force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Multile_DM_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Multile_DM_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multile DM Allowed</label>
    <type>Checkbox</type>
</CustomField>