force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Pre_Defined__c.field-meta.xml
<CustomField>
    <fullName>Pre_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Defined</label>
    <type>Checkbox</type>
</CustomField>