force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Process_Path__c.field-meta.xml
<CustomField>
    <fullName>Process_Path__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Process Path</label>
    <referenceTo>Process_Path__c</referenceTo>
    <relationshipLabel>Process Attribute Dcoument Details</relationshipLabel>
    <relationshipName>Process_Attribute_Dcoument_Details</relationshipName>
    <type>Lookup</type>
</CustomField>