force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/fields/Related_To_sObject__c.field-meta.xml
<CustomField>
    <fullName>Related_To_sObject__c</fullName>
    <formula>text( Document_Metadata__r.Related_To_sObject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To sObject</label>
    <type>Text</type>
</CustomField>