force-app/main/default/objects/Process_Attribute_Dcoument_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>Document_Category__c</columns>
    <columns>Document_Description__c</columns>
    <columns>Process_Path_Task_Detail__c</columns>
    <columns>Document_Metadata__c</columns>
    <columns>DMS_System__c</columns>
    <columns>Associated_With_Sobject__c</columns>
    <columns>Related_To_sObject__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>